# Memu

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md
src/: cli.rs  logger.rs  main.rs  utility.rs
src/chip8/: builtins.rs  cpu.rs  ins_table.rs  instruction.rs  mod.rs  utility.rs
src/chip8/instructions/: mod.rs  op_0.rs  op_1.rs  op_2.rs  op_3.rs  op_4.rs  op_5.rs  op_6.rs  op_7.rs  op_8.rs  op_9.rs  op_A.rs  op_B.rs  op_C.rs  op_D.rs  op_E.rs
src/utility/: fixed_step.rs  mod.rs
