[package]
name = "memu"
description = "A collection of emulators made with Rust."
authors = ["v-maxson"]
version = "0.6.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
smallvec = "1.8.0" # For small vector optimizations.
rustc-hash = "1.1.0" # Fast hasher from the rust compiler.
static_init = "1.0.2" # Lazily evaluated statics.
termcolor = "1.1.3" # Cross-platform terminal coloring.
fixedstep = "0.3.0" # Simple fixed-step loop.
winit = "0.26.1" # Cross-platform windowing.
pixels = "0.9.0" # Hardware accelerated pixel frame buffer.
rand = "0.8.5" # Random Number Generation.
clap = { version = "3.1.18", features = ["derive"] } # CLI Framework