[package]
name = "memu"
description = "A collection of emulators made with Rust."
authors = ["v-maxson"]
version = "0.6.2"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
bitfield = "0.13.2" # Simple bitfields.
clap = { version = "3.1.18", features = ["derive"] } # CLI Framework
fixedstep = "0.3.0" # Simple fixed-step loop.
rustc-hash = "1.1.0" # Fast hasher from the rust compiler.
pixels = "0.9.0" # Hardware accelerated pixel frame buffer.
rand = "0.8.5" # Random Number Generation.
smallvec = "1.8.0" # For small vector optimizations.
static_init = "1.0.2" # Lazily evaluated statics.
termcolor = "1.1.3" # Cross-platform terminal coloring.
winit = "0.26.1" # Cross-platform windowing.
winit_input_helper = "0.12.0" # Winit input.