[package]
name = "memu"
description = "A collection of emulators made with Rust."
authors = ["v-maxson"]
version = "0.6.6"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
bitfield = "0.13.2" # Simple bitfields.
clap = { version = "3.1.18", features = ["derive"] } # CLI Framework
fixedstep = "0.3.0" # Simple fixed-step loop.
itertools = "0.10.3" # Utility for iterators.
pixels = "0.9.0" # Hardware accelerated pixel frame buffer.
rand = "0.8.5" # Random Number Generation.
rodio = "0.15.0" # Sound Library.
rustc-hash = "1.1.0" # Fast hasher from the rust compiler.
smallvec = "1.8.0" # For small vector optimizations.
static_init = "1.0.2" # Lazily evaluated statics.
termcolor = "1.1.3" # Cross-platform terminal coloring.
winit = "0.26.1" # Cross-platform windowing.